# english-gana

./: .gitignore  README.md  README_en.md  main.py  pyproject.toml
src/english_gana/: __init__.py  __main__.py  easy_mark.py  print_transform_dict.py  query.py  respelling.py  test_easy_mark.py  test_query.py  test_respelling.py  test_tokenize.py  test_translate.py  test_translate_ipa.py  tokenize.py  translate.py  translate_ipa.py
src/interpreter/: __init__.py  __main__.py  easy_mark.py  letter_to_ipa.py  test_translate.py  translate.py
