[project]
name = "english-gana"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Donald33 Wang", email = "donald33wang@gmail.com" }]
dependencies = [
    "pytest>=8.3.2",
    "mypy>=1.11.2",
    "readmdict>=0.1.1",
    "python-lzo>=1.15",
    "pyquery>=2.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "pytest"

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]
