[project]
name = "english-gana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyquery>=2.0.1",
    "python-lzo>=1.15",
    "readmdict>=0.1.1",
]

[tool.mypy]
strict = true
disable_error_code = ["import-untyped", "import-not-found", "no-untyped-def"]
