[project]
name = "english-gana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mypy>=1.19.1",
    "pyquery>=2.0.1",
    "pytest>=8.4.2",
    "readmdict>=0.1.1",
    "ruff>=0.14.9",
]

[tool.mypy]
strict = true
disable_error_code = ["import-untyped", "import-not-found", "no-untyped-def"]
